Fix thermo svg, fix font sizing and overflow

--- a/HTML/css/Modules/Sudoku Cipher.css
+++ b/HTML/css/Modules/Sudoku Cipher.css
@@ -56,7 +56,7 @@ div[class*="-examples"] td {
     text-align: center;
     border-collapse: collapse;
     margin: 0.5em 0;
-    font-size: 0.95rem;
+    font-size: 0.8rem;
 }
 
 .cipher-table td {
@@ -71,6 +71,7 @@ div[class*="-examples"] td {
     text-align: center;
     border-collapse: collapse;
     margin: 1em 0;
+    height: 90% !important;
     font-size: 0.95rem;
 }
 
@@ -78,6 +79,7 @@ div[class*="-examples"] td {
     border: 1px solid !important;
     padding-left: 1em;
     padding-right: 1em;
+    height: 25% !important;
     width: calc(100% / 8);
 }
 
@@ -259,6 +261,16 @@ div[class*="-examples"] td {
             border: 2px solid #808080;
         }
 
+        .maze-cell.H {
+            background: #f9c9a9;
+            border: 2px solid #f9c9a9;
+        }
+
+        .dark .maze-cell.H {
+            background: #a95939;
+            border: 2px solid #a95939;
+        }
+
         .wall-top {
             border-top: 2px solid black !important;
         }
@@ -291,6 +303,11 @@ div[class*="-examples"] td {
             border-left: 2px solid white !important;
         }
 
-#thermo-sudoku { 
+#thermo-sudoku {
     background-image: url("../../img/Sudoku\ Cipher/thermometer.svg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
+
+
